--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -10,14 +10,14 @@
 </head>
 <body class="splash-page-home">
     <header>
-        <h2 class=" App-header title-bar-container">BE Product server</h2>
+        <h2 class="title-bar-container make-it-semi-back make-it-dark">BE Product server</h2>
     </header>
 
     <main>
         {{{body}}} 
     </main>
 
-    <footer class="content section">
+    <footer class="content section make-it-white">
         <p>BE Product Server</p>
     </footer>
 </body>
