--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Roboto";
-  src: local("Roboto"),url(../fonts/RobotoCondensed-Regular.ttf)
+  src: local("Roboto"),url(./RobotoCondensed-Regular.ttf)
 }
 
 .div,a:active,a:hover,a:link,a:visited {
@@ -22,8 +22,8 @@ body {
 
 .App {
   text-align: left;
-  padding-top: 5rem;
-  padding-bottom: 5rem
+  padding-top: 0rem;
+  padding-bottom: 0rem
 }
 
 .App-header {
@@ -207,7 +207,7 @@ body {
   color: #000
 }
 
-.card-category-badge-detail,.card-category-badge-price {
+.card-category-badge-detail, .card-category-badge-price {
   background-color: rgba(10,230,230,.999);
   color: #000;
   position: relative;
@@ -344,7 +344,7 @@ body {
 
 .other-bar {
   display: inline-flex;
-  padding-bottom: .5rem;
+  padding-bottom: 0rem;
   justify-content: space-between;
   align-items: center;
   flex-direction: row
@@ -418,7 +418,7 @@ body {
 
 .cart-footer,.general-page-footer {
   position: fixed;
-  bottom: 0;
+  bottom: -1.5rem !important;
   left: 0;
   display: flex;
   flex-direction: rows;
@@ -427,8 +427,8 @@ body {
   flex-wrap: wrap;
   width: 100%;
   background-color: #172330!important;
-  padding: 1rem;
-  z-index: 1
+  padding: 0.7rem;
+  z-index: 1;
 }
 
 .general-page-footer {
@@ -443,7 +443,7 @@ body {
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
-  padding: 1rem
+  padding: 0.7rem;
 }
 
 .general-page-footer-moving,.generic-title-container {
@@ -475,7 +475,7 @@ body {
   background-color: #172330!important;
   padding: 1rem 1rem .7rem;
   border-radius: .35rem;
-  margin-bottom: 1rem
+  margin-bottom: 0rem
 }
 
 .admin-item-min-width {
@@ -495,7 +495,7 @@ body {
 }
 
 .splash-page-home {
-  padding-top: 2rem;
+  padding-top: 0rem;
   min-height: 100vh;
   width: 100%;
   display: flex;
@@ -547,7 +547,7 @@ input:focus,textarea:focus {
 
 .modal-buttons {
   flex-direction: column;
-  margin-top: 20px
+  margin-top: 0px;
 }
 
 .modal {
