return format for products. updated.

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -41,7 +41,7 @@
                 </table>
             `;
 
-            productCount.textContent = `Total Products: ${products.length}`;
+            productCount.textContent = `Displaying ${products.length} product(s)`;
         });
     </script>
 </head>
